--- a/templates/appointment.html
+++ b/templates/appointment.html
@@ -38,7 +38,7 @@
       padding: 12px;
       background-color: #f4f0f0;
       border: 1px solid #444;
-      color: white;
+      color: black;
       border-radius: 6px;
       font-size: 15px;
     }
